# aiqfome_backend

./: .env  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 047d3e29d9fb_create_products.py  10805020a0b0_create_carts.py  31dbb479f2b0_add_cart_item.py  49de79930699_add_cart_item.py  4d5944be2833_add_cart_item.py  7bab7408d25b_teste.py  814c6bd9d3e4_teste.py  9c47b399cc77_teste.py  c030962769d5_create_users_table.py  c9ec0021e09e_create_users_table.py  e25d020b1e92_teste.py  e403c46a6972_teste.py  e7b28f064f43_teste.py
docker/: .env  docker-compose.yml
src/: main.py
src/modules/auth/: main.py
src/modules/auth/core/repository/: auth_repositoy.py
src/modules/auth/core/service/: auth_service.py
src/modules/auth/persistence/database/: psql.py
src/modules/auth/persistence/sqlalchemy/: sqlalchemy_service.py
src/modules/auth/utils/: jwt.py
src/modules/carts/core/entity/: cartitem_entity.py  carts_entity.py
src/modules/carts/core/repository/: carts_repository.py
src/modules/carts/core/service/: carts_service.py
src/modules/carts/persistence/sqlalchemy/: sqlalchemy_service.py
src/modules/products/core/entity/: product_entity.py
src/modules/products/core/repository/: product_repository.py
src/modules/products/core/service/: product_service.py
src/modules/products/persistence/sqlalchemy/: sqlalchemy_service.py
src/modules/user/: main.py
src/modules/user/core/entity/: user_entity.py
src/modules/user/core/repository/: user_repositoy.py
src/shared/database/: psql.py
(+10 files in other folders)
